tests/query_runtime_errors/bad_state_window_return/error.txt
Error: 
    5 |   "snot"
      |   ^^^^^^ Window returned `"snot"` this can't be used as a window reply